Wed Dec 04 18:42:51 GMT 2002  Olly Betts <olly@survex.com>

	* omega.cc,omega.h,omindex.cc,query.cc,scriptindex.cc:
	  Updated in line with OmSettings related changes to the API.

Wed Dec 04 17:13:43 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc: Fixed $dbname to return "default" for the default
	  database, rather than "" - this fixes paging in searches of the
	  default database.
	* templates/query: Removed xDEFAULTOP hidden field which is no longer
	  used.

Wed Dec 04 11:57:13 GMT 2002  Olly Betts <olly@survex.com>

	* templates/query: Removed bogus unmatched '}'.

Thu Nov 28 20:24:08 GMT 2002  Olly Betts <olly@survex.com>

	* omega.cc,query.cc: Updated in line with OmEnquire::get_eset() no
	  longer taking an OmSettings object.

Wed Nov 27 19:02:12 GMT 2002  Olly Betts <olly@survex.com>

	* dbi2omega: Return fields in table order; more efficient;
	  report any error reading a row; if we get a NULL field,
	  don't output it, and suppress perl warning about use of
	  an undefined program.

Wed Nov 27 05:22:04 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in: Set version to 0.6.0.

Wed Nov 27 05:21:00 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in,htmlparse.h,omindex.cc,scriptindex.cc:
	  Use "-Wall -W" rather than "-Wall -Wunused", and fixed the
	  warnings this reveals.

Wed Nov 27 04:20:13 GMT 2002  Olly Betts <olly@survex.com>

	* Makefile.am,dbi2omega: Added perl script to dump any database
	  which perl DBI can access into the dump format expected by
	  scriptindex.

Wed Oct 30 02:02:32 GMT 2002  Olly Betts <olly@survex.com>

	* omega.spec.in: Use bootstrap instead of buildall; don't use "-j4"
	  with make - most people don't all have quad processor boxes!

Wed Oct 30 01:56:31 GMT 2002  Olly Betts <olly@survex.com>

	* buildall: Removed in favour of bootstrap script.

Tue Oct 29 02:01:58 GMT 2002  Olly Betts <olly@survex.com>

	* omindex.cc,scriptindex.cc: Added MAX_PROB_TERM_LENGTH (set to
	  64) to limit size of probabilistic terms.
